2008-09-08  Steve Falkenburg  <sfalken@apple.com>

        Another Windows nightly build fix.

        Reviewed by Sam Weinig.

        * FindSafari/FindSafari.cpp:
        (_tmain): Delete existing WebKitNightly directory in temp.
        * FindSafari/Safari.exe.manifest: Add PROGIDs for each COM class. Remove non-production classes.

2008-09-07  Stephanie Lewis  <slewis@apple.com>

        Reviewed by Mark Rowe.

        Fix DRT build 

        * DumpRenderTree/DumpRenderTreePrefix.h:
        * DumpRenderTree/win/DumpRenderTree.vcproj:

2008-09-06  Steve Falkenburg  <sfalken@apple.com>

        Fix Windows nightlies.
        
        Copy WebKit.dll alongside application so registry-free COM can find it.
        Update embedded manifest to force use registry-free COM.

        Reviewed by Dave Hyatt.

        * FindSafari/FindSafari.cpp:
        (copyManifest):
        (replaceManifest):
        (_tmain):
        * FindSafari/FindSafari.rc: Added.
        * FindSafari/FindSafari.vcproj:
        * FindSafari/Safari.exe.manifest: Added.
        * FindSafari/resource.h: Added.

=== End merge of squirrelfish-extreme ===

2008-08-31  Mark Rowe  <mrowe@apple.com>

        Reviewed by Maciej Stachowiak.

        Add a --profile flag to run-sunspider.

        * Scripts/webkitdirs.pm: Detect --profile or --profiling passed as a command-line argument
        to build scripts as indicating that we should use the "Profiling" configuration.  At present
        this is only supported by JavaScriptCore, so using this argument to build any other project
        will likely result in unexpected behaviour.

2008-08-27  Mark Rowe  <mrowe@apple.com>

        Reviewed by Oliver Hunt.

        Fix run-webkit-tests to handle DRT exiting early.

        * Scripts/run-webkit-tests: Initialize $expectedResultPaths{$base} before it will be used.

=== Start merge of squirrelfish-extreme ===

2008-09-04  Mark Rowe  <mrowe@apple.com>

        Reviewed by Eric Seidel.
